tests/algorithms/transpiler/Zig/graphs/finding_bridges.error
exit status 1
/workspace/mochi/tests/algorithms/transpiler/Zig/graphs/finding_bridges.zig:106:85: error: expected type 'hash_map.HashMap(i64,[]i64,hash_map.AutoContext(i64),80)', found 'hash_map.HashMap([]const u8,i64,hash_map.StringContext,80)'
        std.debug.print("{s}\n", .{_str(compute_bridges(&std.StringHashMap(i64).init(std.heap.page_allocator)))});
                                                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~
/opt/zig-0.14.0/lib/std/hash_map.zig:140:12: note: struct declared here (2 times)
    return struct {
           ^~~~~~
referenced by:
    main: /opt/zig-0.14.0/lib/std/start.zig:647:22
    comptime: /opt/zig-0.14.0/lib/std/start.zig:58:30
    2 reference(s) hidden; use '-freference-trace=4' to see all references